# vocalis.io

./: .gitignore  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: account.py  alignment.py  assessment.py  auth.py  auth_cookies.py  health.py  mfa.py  root.py  target.py
backend/app/api/websockets/: assessment.py  auth.py  buffer.py  decoder.py  events.py  manager.py  models.py  rate_limiter.py
backend/app/core/: csrf.py  feature_flags.py  idempotency.py  logging.py  metrics.py  observability.py  rate_limit_middleware.py  rate_limiter.py  redis.py  security.py  sentry.py
backend/app/core/config/: app.py  settings.py
backend/app/domain/: utils.py
backend/app/domain/account/: repository.py
backend/app/domain/alignment/: constants.py  decoder.py  engine.py  exceptions.py  mapper.py  models.py  registry.py  segmenter.py  service.py  tokenizer.py  viterbi.py
backend/app/domain/assessment/: exceptions.py  models.py  repository.py  service.py
backend/app/domain/audio/: constants.py  exceptions.py  models.py  processors.py  validators.py
backend/app/domain/audit/: service.py
backend/app/domain/auth/: constants.py  dependencies.py  exceptions.py  guards.py  mfa.py  models.py  repository.py  security.py  service.py  session.py  totp.py
backend/app/domain/database/: __init__.py  backup.py  dependencies.py  init.py  session.py  shutdown.py
backend/app/domain/database/models/: __init__.py  audit_log.py  auth_attempt.py  mfa_challenge.py  phoneme_memory.py  pronunciation_attempt.py  session.py  user.py
backend/app/domain/feedback/: constants.py  exceptions.py  generator.py  models.py  personalization.py  service.py
backend/app/domain/jobs/: __init__.py  worker.py
backend/app/domain/models/: __init__.py  service.py
backend/app/domain/phoneme/: _nltk_patch.py  constants.py  decoder.py  engine.py  estimator.py  exceptions.py  matcher.py  models.py  phonemizer.py  scoring.py  service.py  utils.py
backend/app/domain/realtime/: persistence.py  service.py  tasks.py
backend/app/schemas/requests/: alignment.py  auth.py  mfa.py
backend/app/schemas/responses/: account.py  alignment.py  assessment.py  auth.py  health.py  mfa.py  root.py  target.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_auth_attempts.py  0003_add_indexes.py  0004_audit_log.py
backend/scripts/: backup_database.py  check_migrations.py  export_openapi.py  export_openapi_types.py  migrate.py  model_smoke.py  test_model.py  warm_models.py
backend/tests/: conftest.py  test_account.py  test_alignment.py  test_assessment.py  test_auth.py  test_backup.py  test_buffer.py  test_decoder.py  test_feedback.py  test_health.py  test_integration.py  test_mfa.py  test_migrations.py  test_model_readiness.py  test_personalization.py  test_protected.py  test_security.py  test_target.py  test_websocket.py
frontend/: .dockerignore  .prettierignore  Dockerfile  components.json  eslint.config.mjs  instrumentation-client.ts  next.config.ts  package.json  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  vitest.config.mts
frontend/__tests__/: setup.ts
frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/components/: CountUp.tsx  DotField.tsx  auth-provider.tsx  intro-loader.tsx  site-loader.tsx
frontend/lib/: api.ts  click-soft.ts  dotmatrix-core.tsx  dotmatrix-hooks.ts  error-005.ts  home-assessment.ts  logger.ts  page-layouts.tsx  question-004.ts  realtime-assessment.ts  sound-engine.ts  switch-001.ts  (+7 more)
notebooks/: 01_svarah_dataset_exploration.ipynb  02_wav2vec2_finetuning.ipynb  03_wav2vec2_model_evaluation.ipynb
(+59 files in other folders)
