[project]
name = "backend"
version = "0.1.0"
description = "This Directory Contains The Necessary Files And Packages For The Backend Of Vocalis"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "redis[hiredis]>=5.3.0",
    "g2p-en>=2.1.0",
    "greenlet>=3.5.1",
    "groq>=1.4.0",
    "litestar[standard]>=2.24.0",
    "nltk",
    "sentry-sdk>=2.63.0",
    "numpy>=2.5.0",
    "asyncpg>=0.30.0",
    "phonemizer>=3.3.0",
    "prometheus-client>=0.21.0",
    "python-json-logger>=4.1.0",
    "arq>=0.26.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pyotp>=2.10.0",
    "qrcode[pil]>=8.2",
    "scipy>=1.18.0",
    "soundfile>=0.14.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "torch>=2.12.1",
    "torchao>=0.17.0",
    "transformers>=5.12.1",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "pyrefly>=1.1.1",
]

[tool.uv.sources]
nltk = { git = "https://github.com/nltk/nltk.git", rev = "16a32d680d070254d5744e33fa83f9c0056d5a1f" }

[tool.ruff]

line-length = 88
target-version = "py314"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]

select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"tests/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]

asyncio_mode = "auto"

python_files = ["test_*.py"]

testpaths = ["tests"]

markers = [
    "model: real model-backed assessment tests",
]

[tool.pyrefly]
project-includes = [
    "app/**/*.py*",
]
project-excludes = [
    "tests/**",
    "scripts/**",
    "**/__pycache__/**",
    ".venv/**",
]
errors = { bad-return = false }
ignore-missing-imports = ["transformers.*", "torchao.*"]
